--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,23 @@
 <html>
   <head>
     <title>MessageMeApp</title>
+    <%= favicon_link_tag %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
   </head>
 
   <body>
+
+  <div class="ui small inverted menu">
+    <div class="ui container">
+      <%= render 'layouts/navigation'%>
+  </div>
+  <div class="ui container">
     <%= yield %>
+  </div>
   </body>
 </html>
