--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
       <%= render 'layouts/navigation'%>
   </div>
   <div class="ui container">
+    <%= render 'layouts/messages' %>
     <%= yield %>
   </div>
   </body>
