--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,5 +21,10 @@
     <%= render 'layouts/messages' %>
     <%= yield %>
   </div>
+
+   <div class="ui container">
+      <%= debug(params) if Rails.env.development? %>
+  </div>
+
   </body>
 </html>
