--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,8 +1,17 @@
+
 <a class="item">
+  <%= link_to 'Home', home_path, class: "item" %>
   <%= link_to 'Chatroom', root_path, class: "item" %>
-</a>
-<a class="item">
-  Messages
+  <%= link_to 'Active Users', users_path, class: "item" %>
+  <div class="left menu">
+    <div class="ui dropdown item">
+      Account <i class="dropdown icon"></i>
+      <div class="menu">
+        <%= link_to 'Sub menu 1', "#", class: "item" %>
+        <%= link_to 'Sub menu 2', "#", class: "item" %>
+      </div>
+    </div>
+</div>
 </a>
 <div class="right menu">
   <div class="ui dropdown item">
@@ -18,7 +27,7 @@
 </div>
 <% if !logged_in? %>
   <div class="item">
-    <%= link_to "Log in", login_path, class: "ui primary button" %>
+    <%= link_to "Sign-up", signup_path, class: "ui primary button" %>
   </div>
 <% end %>
 </div>
