--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,37 @@
-<h1 class="ui center aligned large header"> Sign Up Page </h1>
+<h1 class="ui center aligned large header"> Signup Page </h1>
+
+<div class="ui placeholder segment">
+  <div class="ui two column very relaxed stackable grid">
+    <div class="column">
+      <%= form_for(:users, html: {class: "ui form", role: "form"}, url: signup_path) do |f| %>
+        <div class="field">
+          <%= f.label :username, "Username" %>
+          <div class="ui left icon input">
+            <%= f.text_field :username, placeholder: "Username" %>
+            <i class="user icon"></i>
+          </div>
+        </div>
+        <div class="field">
+          <%= f.label :password, "Password" %>
+          <div class="ui left icon input">
+            <%= f.password_field :password, placeholder: "Password" %>
+            <i class="lock icon"></i>
+          </div>
+        </div>
+        <%= f.button "Signup", class: "ui blue submit button" %>
+      <% end %>
+    </div>
+    <div class="middle aligned column">
+      <%= link_to "Log in", login_path, class: "ui big blue button" %>
+      <%# <div class="ui big blue disabled button">
+        <i class="signup icon"></i>
+        Change Later
+      </div> %>
+    </div>
+  </div>
+  <div class="ui vertical divider">
+    Or
+  </div>
+</div>
+
+    
