--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,7 +5,7 @@
   <%= link_to 'Active Users', users_path, class: "item" %>
   <div class="left menu">
     <div class="ui dropdown item">
-      Account <i class="dropdown icon"></i>
+      Account <i class="ui simple dropdown icon"></i>
       <div class="menu">
         <%= link_to 'Sub menu 1', "#", class: "item" %>
         <%= link_to 'Sub menu 2', "#", class: "item" %>
